--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <p id="demo"></p>
+    <button id='hi'>btn</button>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
